# kley

./: .dockerignore  .gitignore  .gitleaks.toml  BINDERY_UI_PORT_STATUS.md  Cargo.toml  Dockerfile  README.md  browser-console-errors.txt  build-docker.sh  composer-snapshot.md  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  docker-session.sh  eslint.config.js  flake.nix  kley-run.sh  kley-session.sh  lefthook.yml  package-lock.json  package.json  playwright-web-server.mjs  playwright.config.ts  preflight.sh  result  self-improve.sh  self-improvement-ideas.md  test_ws.py  web-auth-snapshot-3213.md  web-ui-resource-snapshot.md
.agents/rules/: 00-kley-dev.md
.playwright-mcp/: page-2026-04-01T04-52-20-408Z.yml  page-2026-04-01T04-53-47-724Z.yml  page-2026-04-01T04-54-11-634Z.yml  page-2026-04-01T04-54-41-830Z.yml  page-2026-04-01T04-55-00-257Z.yml  page-2026-04-01T04-55-45-907Z.yml  page-2026-04-01T04-56-39-276Z.yml  page-2026-04-01T04-56-53-457Z.yml  page-2026-04-01T04-56-55-423Z.yml  page-2026-04-01T04-57-08-684Z.yml  page-2026-04-01T04-57-15-682Z.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: repo-cleanup-iteration-plan.md
.sisyphus/evidence/: f1-plan-compliance.md  f2-code-quality.md  f3-experiential-qa.txt  f4-scope-fidelity.md  task-1-session-usage-contract-error.txt  task-1-session-usage-contract.txt  task-2-turn-aggregation-error.txt  task-2-turn-aggregation.txt  task-3-models-dev-catalog-error.txt  task-3-models-dev-catalog.txt  task-6-store-run-regression-error.txt  task-6-store-run-regression.txt
.sisyphus/handoffs/: agent-vm-baseline-update-lane.md
.sisyphus/plans/: auth-startup-routing.md  bindery-ui-integration.md  initial-lsp-language-support.md  repo-cleanup-iteration-plan.md  session-token-cost-query.md  subagent-delegation-system.md  web-search-tool.md  web-ui-resource-usage.md
agent-vm/: README.md  default.nix  developer-heavy-tool-manifest.txt  promotion-contract.nix
agent-vm/hosts/: agent-pi.nix  saga-dev.nix  saga-dev2.nix
agent-vm/modules/: base.nix  default.nix  developer-tools.nix  disko.nix  impermanence.nix  opencode-harness.nix
agent-vm/profiles/: developer-heavy.nix
agent-vm/scripts/: apply-local-checkout-canary.sh  deploy-agent-vm.sh  recover-canary-after-failed-update.sh  validate-canary-kley.sh  write-generated-vault-env.sh
hooks/: pre-commit  pre-push
playwright/: core-workspace.spec.ts
playwright/support/: web-server.mjs
src/: agent.rs  compact.rs  diagnostics.rs  events.rs  http_client.rs  lib.rs  main.rs  preflight.rs  test_openai.rs  text.rs
src/auth/: mod.rs  openai.rs  zai.rs
src/harness/: hashline.rs  mod.rs
src/lsp/: catalog_exact_tests.rs  mod.rs  root.rs  service.rs
src/pricing/: mod.rs  models_dev.rs
src/provider/: mod.rs  openai.rs  test.rs  zai.rs
src/runtime/: manager.rs  mod.rs  session.rs  settings.rs
src/skills/: mod.rs
src/store/: mod.rs  schema.rs  session.rs  turn.rs
src/tools/: hashline_edit.rs  lsp.rs  mod.rs  patch.rs  read_file.rs  read_skill.rs  report_status.rs  shell.rs  tool_call_telemetry.rs  web_search.rs
src/web/: callback.rs  (+10 more)
templates/: index.html
tests/: auth_backends.rs  cli.rs  default_registry.rs  docker_session_runtime.rs  event_pipeline.rs  hashline_contract.rs  hashline_harness.rs  hashline_observability.rs  preflight_reports_each_missing_lsp_binary_by_name.rs  preflight_requires_all_v1_lsp_servers.rs  pricing_models_dev.rs  runtime.rs  runtime_lsp_exact.rs  runtime_web_search.rs  self_improve_prompt.rs  session_lifecycle.rs  sse_parsing.rs  store_concurrency.rs  store_session_usage.rs  vm-baseline-check.sh  web.rs  web_search_exact.rs
(+60 files in other folders)
