[package]
name = "kley"
version = "0.1.0"
edition = "2024"

[lib]
name = "kley"
path = "src/lib.rs"

[[bin]]
name = "kley"
path = "src/main.rs"

[[test]]
name = "lsp-catalog-exact"
path = "src/lsp/catalog_exact_tests.rs"

[dependencies]
anyhow = "1"
askama = "0.12"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "5"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
http = "1"
urlencoding = "2"
futures-util = "0.3"
hex = "0.4"
age = "0.11"
rpassword = "7"
vaultrs = "0.7"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
testing = []

[dev-dependencies]
kley = { path = ".", features = ["testing"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
